Added timing, introduced var, and reduced scope where possible, minor code enhancements